# solana-mail

./: Cargo.toml
src/: entry.rs  instruction.rs  lib.rs  processor.rs
tests/: integration.rs
